monitoring-ECK/namespace-monitoring.yml

apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    control-plane: elastic-operator
    app.kubernetes.io/version: "1.3.1"
